--- a/.editorconfig
+++ b/.editorconfig
@@ -1,6 +1,6 @@
 [*]
 end_of_line = lf
 insert_final_newline = true
-indent_style = tab
+indent_style = space
 tab_width = 2
 trim_trailing_whitespace = true
