--- a/package.json
+++ b/package.json
@@ -1,27 +1,26 @@
 {
-	"name": "assembleHTML",
-	"version": "1.0.0",
-	"private": "true",
-	"author": "menadwork kommunikation GmbH (http://www.menadwork.com)",
-	"devDependencies": {
-		"assemble": "^0.4.37",
-		"assemble-contrib-permalinks": "~0.3.6",
-		"fs-utils": "^0.3.6",
-		"handlebars-helper-rel": "^0.1.2",
-		"lodash": "^2.4.1",
-		"grunt": "latest",
-		"matchdep": "latest",
-		"time-grunt": "latest",
-		"grunt-contrib-watch": "latest",
-		"grunt-contrib-jshint": "latest",
-		"grunt-contrib-concat": "latest",
-		"grunt-contrib-uglify": "latest",
-		"grunt-contrib-less": "latest",
-		"grunt-contrib-compass": "latest",
-		"grunt-contrib-cssmin": "latest",
-		"grunt-contrib-clean": "latest",
-		"grunt-contrib-copy": "latest",
-		"grunt-autoprefixer": "latest",
-		"grunt-csswring": "latest"
-	}
+  "name": "assembleHTML",
+  "version": "1.0.0",
+  "private": "true",
+  "author": "@Freizeitler",
+  "devDependencies": {
+    "assemble": "^0.4.37",
+    "assemble-contrib-permalinks": "~0.3.6",
+    "fs-utils": "^0.3.6",
+    "grunt": "latest",
+    "grunt-autoprefixer": "latest",
+    "grunt-contrib-clean": "latest",
+    "grunt-contrib-compass": "latest",
+    "grunt-contrib-concat": "latest",
+    "grunt-contrib-copy": "latest",
+    "grunt-contrib-cssmin": "latest",
+    "grunt-contrib-jshint": "latest",
+    "grunt-contrib-less": "latest",
+    "grunt-contrib-uglify": "latest",
+    "grunt-contrib-watch": "latest",
+    "handlebars-helper-rel": "^0.1.2",
+    "lodash": "^2.4.1",
+    "matchdep": "latest",
+    "time-grunt": "latest"
+  }
 }
