--- a/.assemble.yml
+++ b/.assemble.yml
@@ -11,6 +11,7 @@ title:          "Assemble &raquo; Pattern Lab"
 base:           _dist
 dest:           <%= site.base %>
 assets:         <%= site.base %>/assets
+styleguide:     <%= site.base %>/_styleguide
 
 # =============================================
 # SOURCE CONFIG
