--- a/templates/styleguide/config.json
+++ b/templates/styleguide/config.json
@@ -5,7 +5,7 @@
 
     "colors": {
       "description": "Define colors in config.json",
-      "codes": ["#eee", "#999", "#555", "#333", "green"]
+      "codes": ["#eee", "rgba(75,75,75,1)", "#555555", "#333", "green"]
     },
 
     "atoms": {
