make styleguide work without iframes

--- a/templates/styleguide/config.json
+++ b/templates/styleguide/config.json
@@ -41,7 +41,7 @@
       "description": "Organisms are lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim nobis qui accusantium voluptatum magnam. Architecto ullam ipsam vel non ipsum amet culpa, necessitatibus perspiciatis repellat. Deleniti recusandae, ipsum tenetur autem omnis. Officiis dolor laudantium, tempore dolore id voluptate tenetur reiciendis autem. Architecto sequi, voluptatibus libero error vel omnis voluptatem neque exercitationem nisi inventore minus.",
 
       "patterns": {
-
+        "susy-grid-example": "A quick example to test susy grid system"
       }
     }
 
