--- a/package.json
+++ b/package.json
@@ -1,27 +1,23 @@
 {
   "name": "assembleHTML",
-  "version": "1.0.0",
-  "private": "true",
-  "author": "@Freizeitler",
+  "version": "0.0.1",
+  "private": true,
+  "author": "menadwork GmbH",
   "devDependencies": {
-    "assemble": "^0.4.37",
-    "assemble-contrib-permalinks": "~0.3.6",
-    "fs-utils": "^0.3.6",
-    "grunt": "latest",
-    "grunt-autoprefixer": "latest",
-    "grunt-contrib-clean": "latest",
-    "grunt-contrib-compass": "latest",
-    "grunt-contrib-concat": "latest",
-    "grunt-contrib-copy": "latest",
-    "grunt-contrib-cssmin": "latest",
-    "grunt-contrib-jshint": "latest",
-    "grunt-contrib-less": "latest",
-    "grunt-contrib-uglify": "latest",
-    "grunt-contrib-watch": "latest",
-    "handlebars-helper-rel": "^0.1.2",
-    "lodash": "^2.4.1",
-    "matchdep": "latest",
-    "time-grunt": "latest",
-    "grunt-twig-render": "^1.7.3"
+    "grunt": "^1.0.1",
+    "grunt-autoprefixer": "^3.0.4",
+    "grunt-contrib-clean": "^1.0.0",
+    "grunt-contrib-concat": "^1.0.1",
+    "grunt-contrib-copy": "^1.0.0",
+    "grunt-contrib-cssmin": "^1.0.1",
+    "grunt-contrib-jshint": "^1.0.0",
+    "grunt-contrib-less": "^1.3.0",
+    "grunt-contrib-uglify": "^1.0.1",
+    "grunt-contrib-watch": "^1.0.0",
+    "grunt-twig-render": "^1.7.3",
+    "grunt-sass": "1.2.0",
+    "grunt-newer": "^1.2.0",
+    "matchdep": "^1.0.1",
+    "time-grunt": "^1.3.0"
   }
 }
